--- a/WebApplication7/Pages/Index.cshtml
+++ b/WebApplication7/Pages/Index.cshtml
@@ -6,5 +6,5 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
-    <p>Learn about GITGITGITGITGITGITGIT committ<a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <p>Learn about GIT PRUEBA PUBLICACION JENKINS<a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
